--- a/eladmin-system/pom.xml
+++ b/eladmin-system/pom.xml
@@ -37,6 +37,12 @@
             <groupId>com.lwohvye</groupId>
             <artifactId>eladmin-tools</artifactId>
             <version>2.6.10</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>fastjson</artifactId>
+                    <groupId>com.alibaba</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- Spring boot websocket -->
