--- a/pom.xml
+++ b/pom.xml
@@ -454,6 +454,13 @@
         &#45;&#45;add-opens java.base/java.lang=ALL-UNNAMED
         如果反射代码在命名模块中，则ALL-UNNAMED可以用其名称替换。
         如果要添加的标志太多，则可以考虑使用封装终止开关 &#45;&#45;permit-illegal-access。它将允许类路径上的所有代码反射所有已命名的模块
+        针对Java16下，无法反射java.base包下的内容的情况，在mvn的运行环境中添加如下配置
+        ——illegal-access
+        该参数有四个可选值：
+        permit：默认值，允许通过反射访问，因此会提示像上面一样的警告，这个是首次非法访问警告，后续不警告
+        warn：每次非法访问都会警告
+        debug：在warn的基础上加入了类似e.printStackTrace()的功能
+        deny：禁止所有的非法访问除了使用特别的命令行参数排除的模块，比如使用——add-opens排除某些模块使其能够通过非法反射访问
         -->
     </build>
 
