Mac环境javadoc缺少JAVA_HOME问题

--- a/pom.xml
+++ b/pom.xml
@@ -403,6 +403,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
+                <!--For maven package error:  javadoc command: The environment variable JAVA_HOME is not correctly set.-->
+                <configuration>
+                    <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
+                </configuration>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
