添加Redis zset的Java版实现，来自互联网，可参考部分设计思路，存档

--- a/eladmin-common/pom.xml
+++ b/eladmin-common/pom.xml
@@ -23,5 +23,12 @@
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
+        <!--     基础类型集合，主要用于支持long类型key    -->
+        <!-- https://mvnrepository.com/artifact/it.unimi.dsi/fastutil -->
+        <dependency>
+            <groupId>it.unimi.dsi</groupId>
+            <artifactId>fastutil</artifactId>
+            <version>${fastutil.version}</version>
+        </dependency>
     </dependencies>
 </project>
