--- a/eladmin-system/pom.xml
+++ b/eladmin-system/pom.xml
@@ -19,6 +19,12 @@
     </properties>
 
     <dependencies>
+        <!--  基础Api -->
+        <dependency>
+            <groupId>com.lwohvye</groupId>
+            <artifactId>eladmin-api</artifactId>
+            <version>2.6.11</version>
+        </dependency>
         <!-- 代码生成模块 -->
         <dependency>
             <groupId>com.lwohvye</groupId>
