--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <module>eladmin-system</module>
         <module>eladmin-tools</module>
         <module>eladmin-generator</module>
+        <module>eladmin-api</module>
     </modules>
 
     <parent>
