--- a/eladmin-search/pom.xml
+++ b/eladmin-search/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>eladmin</artifactId>
         <groupId>com.lwohvye</groupId>
-        <version>2.6.11</version>
+        <version>2.6.12</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>com.lwohvye</groupId>
             <artifactId>eladmin-system</artifactId>
-            <version>2.6.11</version>
+            <version>${project.core.version}</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
