--- a/eladmin-system/pom.xml
+++ b/eladmin-system/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>eladmin</artifactId>
         <groupId>com.lwohvye</groupId>
-        <version>2.6.11</version>
+        <version>2.6.12</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -23,13 +23,13 @@
         <dependency>
             <groupId>com.lwohvye</groupId>
             <artifactId>eladmin-api</artifactId>
-            <version>2.6.11</version>
+            <version>${project.core.version}</version>
         </dependency>
         <!-- 代码生成模块 -->
         <dependency>
             <groupId>com.lwohvye</groupId>
             <artifactId>eladmin-generator</artifactId>
-            <version>2.6.11</version>
+            <version>${project.core.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.lwohvye</groupId>
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>com.lwohvye</groupId>
             <artifactId>eladmin-tools</artifactId>
-            <version>2.6.11</version>
+            <version>${project.core.version}</version>
             <exclusions>
                 <exclusion>
                     <artifactId>fastjson</artifactId>
