--- a/eladmin-tools/pom.xml
+++ b/eladmin-tools/pom.xml
@@ -14,8 +14,8 @@
 
     <properties>
         <mail.version>1.4.7</mail.version>
-        <qiniu.version>[7.2.0, 7.2.99]</qiniu.version>
-        <alipay.version>4.9.153.ALL</alipay.version>
+        <qiniu.version>7.8.0</qiniu.version>
+        <alipay.version>4.15.20.ALL</alipay.version>
     </properties>
 
     <dependencies>
