--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
         <log4jdbc.version>1.16</log4jdbc.version>
         <swagger.version>3.0.0</swagger.version>
         <io.swagger.version>1.6.2</io.swagger.version>
-        <fastjson.version>1.2.76</fastjson.version>
+        <fastjson.version>1.2.78</fastjson.version>
         <druid.version>1.2.6</druid.version>
         <hutool.version>5.7.7</hutool.version>
         <fastutil.version>8.5.4</fastutil.version>
@@ -73,7 +73,7 @@
         <!--logstash有所依赖，需要使用management统一管理依赖-->
         <logstash.version>6.6</logstash.version>
         <logback.version>1.2.4</logback.version>
-        <!--    kafka    -->
+        <!--    kafka，其他依赖（包括外部）通过以下的参数指定依赖，可以通过下面的方式指定相关版本    -->
         <kafka.version>2.8.0</kafka.version>
         <spring-kafka.version>2.7.5</spring-kafka.version>
         <argLine>
