添加阿里云OSS相关依赖，存储待改造

--- a/eladmin-starter/src/main/resources/config/application-dev.yml
+++ b/eladmin-starter/src/main/resources/config/application-dev.yml
@@ -356,6 +356,7 @@ jwt:
 ip:
   local-parsing: true
 
+
 # 文件存储路径
 file:
   mac:
@@ -374,3 +375,11 @@ file:
 local:
   sys:
     name: X0X
+
+# oss配置
+alibaba:
+  cloud:
+    access-key: xx
+    secret-key: xx
+    oss:
+      endpoint: xx
