--- a/eladmin-starter/src/main/resources/fastjson.properties
+++ b/eladmin-starter/src/main/resources/fastjson.properties
@@ -1,4 +1,4 @@
 #on safeMode
-fastjson.parser.safeMode=true
+#fastjson.parser.safeMode=true
 #set autoTypeAccpet
-#fastjson.parser.autoTypeAccept=com.lwohvye.domain,com.lwohvye.modules.
+fastjson.parser.autoTypeAccept=com.lwohvye.domain,com.lwohvye.modules.
