--- a/eladmin-starter/src/main/resources/config/application-dev.yml
+++ b/eladmin-starter/src/main/resources/config/application-dev.yml
@@ -183,57 +183,21 @@ spring:
 #          slave-data-source-names: replica-ds-2-0,replica-ds-2-1
 
   # redis配置
-  main-redis:
-    #数据库索引
-    database: ${REDIS_DB:4}
-    host: ${REDIS_HOST:127.0.0.1}
-    port: ${REDIS_PORT:6379}
-    password: ${REDIS_PWD:}
-    #连接超时时间
-    timeout: 5000
-    pool:
-      #        连接池最大连接数
-      max-active: 10
-      #        连接池最大空闲连接数
-      max-idle: 5
-      #        连接池最小空闲连接数
-      min-idle: 1
-  slave-redis:
-    #数据库索引
-    database: ${REDIS_DB:4}
-    host: ${REDIS_HOST:127.0.0.1}
-    port: ${REDIS_PORT:6379}
-    password: ${REDIS_PWD:}
-    #连接超时时间
-    timeout: 5000
-    pool:
-      max-active: 10
-      max-idle: 5
-      min-idle: 1
-  auth-redis:
-    #数据库索引
-    database: ${REDIS_DB:6}
-    host: ${REDIS_HOST:127.0.0.1}
-    port: ${REDIS_PORT:6379}
-    password: ${REDIS_PWD:}
-    #连接超时时间
-    timeout: 5000
-    pool:
-      max-active: 10
-      max-idle: 5
-      min-idle: 1
-  auth-slave-redis:
-    #数据库索引
-    database: ${REDIS_DB:6}
-    host: ${REDIS_HOST:127.0.0.1}
-    port: ${REDIS_PORT:6379}
-    password: ${REDIS_PWD:}
-    #连接超时时间
-    timeout: 5000
-    pool:
-      max-active: 10
-      max-idle: 5
-      min-idle: 1
+  redis:
+      #详细版的redisson配置可参考：https://github.com/redisson/redisson/tree/master/redisson-spring-boot-starter
+    enable: true
+  # Connection URL, will override host, port and password (user will be ignored), e.g. redis://user:password@example.com:6379
+    url: redis://127.0.0.1:6379
+    timeout: 2000 # 连接或读取超时时长（毫秒）
+    database: 0
+    redisson:
+      file: classpath:redisson.yml
+    jedis:
+      pool:
+        max-active: 10  # 连接池最大连接数（使用负值表示没有限制）
+        max-wait: 800 # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-idle: 5 # 连接池中的最大空闲连接
+        min-idle: 2 # 连接池中的最小空闲连接
 
   ##### RabbitMQ ####
   rabbitmq:
