--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,7 @@
         <!--logstash有所依赖，需要使用management统一管理依赖-->
         <logstash.version>6.6</logstash.version>
         <logback.version>1.2.4</logback.version>
+        <redisson.version>3.16.3</redisson.version>
         <argLine>
             -Dfile.encoding=UTF-8
         </argLine>
@@ -125,6 +126,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+        <!-- Redisson -->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>${redisson.version}</version>
+        </dependency>
+
 
         <!--spring boot 集成redis所需common-pool2-->
         <dependency>
