--- a/eladmin-search/src/main/resources/config/application-dev.yml
+++ b/eladmin-search/src/main/resources/config/application-dev.yml
@@ -5,7 +5,7 @@ spring:
       #     使用只读数据源
       db-type: com.alibaba.druid.pool.DruidDataSource
       driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-      url: jdbc:log4jdbc:mysql://${DB_HOST:192.168.1.140}:${DB_PORT:3308}/${DB_NAME:eladmin}?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
+      url: jdbc:log4jdbc:mysql://${DB_HOST:127.0.0.1}:${DB_PORT:3308}/${DB_NAME:eladmin}?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
       #     从库改用只读账号
       username: ${DB_USER:reader}
       password: ${DB_PWD:123456}
@@ -56,7 +56,7 @@ spring:
   #  monogodb
   data:
     mongodb:
-      host: 192.168.1.140
+      host: 127.0.0.1
       port: 27017
       # username: test_user
       # password: pass@123
@@ -64,63 +64,28 @@ spring:
     elasticsearch:
       client:
         reactive:
-          endpoints: 192.168.1.140:9200
+          endpoints: 127.0.0.1:9200
+
   # redis配置
-  main-redis:
-    #数据库索引
-    database: ${REDIS_DB:4}
-    host: ${REDIS_HOST:192.168.1.140}
-    port: ${REDIS_PORT:6379}
-    password: ${REDIS_PWD:}
-    #连接超时时间
-    timeout: 5000
-    pool:
-      #        连接池最大连接数
-      max-active: 10
-      #        连接池最大空闲连接数
-      max-idle: 5
-      #        连接池最小空闲连接数
-      min-idle: 1
-  slave-redis:
-    #数据库索引
-    database: ${REDIS_DB:4}
-    host: ${REDIS_HOST:192.168.1.140}
-    port: ${REDIS_PORT:6380}
-    password: ${REDIS_PWD:}
-    #连接超时时间
-    timeout: 5000
-    pool:
-      max-active: 10
-      max-idle: 5
-      min-idle: 1
-  auth-redis:
-    #数据库索引
-    database: ${REDIS_DB:6}
-    host: ${REDIS_HOST:192.168.1.140}
-    port: ${REDIS_PORT:6379}
-    password: ${REDIS_PWD:}
-    #连接超时时间
-    timeout: 5000
-    pool:
-      max-active: 10
-      max-idle: 5
-      min-idle: 1
-  auth-slave-redis:
-    #数据库索引
-    database: ${REDIS_DB:6}
-    host: ${REDIS_HOST:192.168.1.140}
-    port: ${REDIS_PORT:6380}
-    password: ${REDIS_PWD:}
-    #连接超时时间
-    timeout: 5000
-    pool:
-      max-active: 10
-      max-idle: 5
-      min-idle: 1
+  redis:
+    #详细版的redisson配置可参考：https://github.com/redisson/redisson/tree/master/redisson-spring-boot-starter
+    enable: true
+    # Connection URL, will override host, port and password (user will be ignored), e.g. redis://user:password@example.com:6379
+    url: redis://127.0.0.1:6379
+    timeout: 2000 # 连接或读取超时时长（毫秒）
+    database: 0
+    redisson:
+      file: classpath:redisson.yml
+    jedis:
+      pool:
+        max-active: 10  # 连接池最大连接数（使用负值表示没有限制）
+        max-wait: 800 # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-idle: 5 # 连接池中的最大空闲连接
+        min-idle: 2 # 连接池中的最小空闲连接
 
   ##### RabbitMQ ####
   rabbitmq:
-    host: 192.168.1.140 # rabbitmq的连接地址
+    host: 127.0.0.1 # rabbitmq的连接地址
     port: 5672 # rabbitmq的连接端口号
     virtual-host: /eladmin # rabbitmq的虚拟host
     username: admin # rabbitmq的用户名
