--- a/eladmin-tools/pom.xml
+++ b/eladmin-tools/pom.xml
@@ -42,6 +42,10 @@
 
         <!--邮件依赖-->
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        <dependency>
             <groupId>javax.mail</groupId>
             <artifactId>mail</artifactId>
             <version>${mail.version}</version>
