消息消费，整合报错邮件通知

--- a/eladmin-starter/src/main/resources/config/application-dev.yml
+++ b/eladmin-starter/src/main/resources/config/application-dev.yml
@@ -224,6 +224,7 @@ spring:
     password: xxx #login password
     properties:
       from: xxx@xxx.com #发件人（邮箱）
+      to-dev: xxx@oo.com #信息默认接收人（邮箱）
 
   servlet:
     multipart:
