添加部分注释

--- a/document/nginx/proxy.conf
+++ b/document/nginx/proxy.conf
@@ -1,13 +1,14 @@
 server {
+    # 前端地址
 	listen 8018;
 	server_name 192.168.1.140;
-
+    # 前端路径
 	location / {
 		root /mydata/nginx/eladmin-web;
 		index index.html;
 
 	}
-
+    # 代理后端
 	location /server-api {
 		proxy_pass http://127.0.0.1:8085/; #这里的端口记得改成项目对应的哦
 		proxy_set_header X-Forwarded-Proto $scheme;
@@ -18,18 +19,23 @@ server {
 		}
 	}
 
+# 配置后端服务
 upstream proxy_svr_api {
+    # 正常服务提供方，包含权重及失败几次后，熔断一段时间。这里是连续失败2次后，熔断2秒
 	server 127.0.0.1:8081 weight=2 max_fails=2 fail_timeout=2;
 	server 127.0.0.1:8082 weight=2 max_fails=2 fail_timeout=2;
 	server 127.0.0.1:8083 weight=2 max_fails=2 fail_timeout=2;
+	# 配置备份，当其他服务都失效时，启用本代理
 	server 127.0.0.1:8084 weight=2 backup;
 
 }
 
+# 后端代理-负载均衡
 server {
 	listen 8085;
 	server_name 127.0.0.1;
 	location / {
+	    # 配置 location 及 proxy_pass时，需注意什么时候要以 / 结尾，待进一步梳理
 		proxy_pass http://proxy_svr_api/; #分号前要以 / 结尾
 	}
 }
