--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -44,9 +44,9 @@ jobs:
       uses: actions/setup-java@v2.3.1
       with:
         # The Java version to set up. Takes a whole or semver Java version. See examples of supported syntax in README file
-        java-version: '16'
+        java-version: '17'
         # Java distribution. See the list of supported distributions in README file
-        #distribution: 
+        distribution: 'temurin'
         # The package type (jdk, jre, jdk+fx, jre+fx)
         #java-package: # optional, default is jdk
         # The architecture of the package
