部分问题及Bug修复。 1、Spring bean的注入问题。通过特殊方式初始化的bean，需通过特殊的方式注入属性 2、对称加密解密报错，暂恢复DES 3、redis报错，当前redis使用的是redisson中的配置，主体因为在RedisConfig中，初始化template时，传人的redisConnectionFactory是redissonConnectionFactory

--- a/eladmin-starter/src/main/resources/config/application-dev.yml
+++ b/eladmin-starter/src/main/resources/config/application-dev.yml
@@ -182,10 +182,12 @@ spring:
 #          master-data-source-name: primary-ds-2
 #          slave-data-source-names: replica-ds-2-0,replica-ds-2-1
 
+  # cache配置
+  cache:
+    type: redis
   # redis配置
   redis:
       #详细版的redisson配置可参考：https://github.com/redisson/redisson/tree/master/redisson-spring-boot-starter
-    enable: true
   # Connection URL, will override host, port and password (user will be ignored), e.g. redis://user:password@example.com:6379
     url: redis://127.0.0.1:6379
     timeout: 2000 # 连接或读取超时时长（毫秒）
