--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,10 @@
 
     <developers>
         <developer>
-            <name>lWoHvYe</name>
+            <id>lWoHvYe</id>
+            <name>王红岩</name>
             <email>lWoHvYe@outlook.com</email>
+            <url>https://www.lwohvye.com</url>
         </developer>
     </developers>
 
@@ -65,14 +67,14 @@
         <druid.version>1.2.8</druid.version>
         <hutool.version>5.7.15</hutool.version>
         <fastutil.version>8.5.6</fastutil.version>
-        <lombok.version>1.18.20</lombok.version>
-        <commons-pool2.version>2.9.0</commons-pool2.version>
+        <lombok.version>1.18.22</lombok.version>
+        <commons-pool2.version>2.11.1</commons-pool2.version>
         <!--mapstruct也要用新版本才行-->
         <mapstruct.version>1.4.2.Final</mapstruct.version>
 
         <!--logstash有所依赖，需要使用management统一管理依赖-->
         <logstash.version>6.6</logstash.version>
-        <logback.version>1.2.4</logback.version>
+        <logback.version>1.2.6</logback.version>
         <redisson.version>3.16.3</redisson.version>
         <argLine>
             -Dfile.encoding=UTF-8
@@ -133,7 +135,6 @@
             <version>${redisson.version}</version>
         </dependency>
 
-
         <!--spring boot 集成redis所需common-pool2-->
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -157,45 +158,6 @@
         </dependency>
 
         <!-- Swagger UI 相关 -->
-        <!--        <dependency>-->
-        <!--            <groupId>io.springfox</groupId>-->
-        <!--            <artifactId>springfox-swagger2</artifactId>-->
-        <!--            <version>${swagger.version}</version>-->
-        <!--            <exclusions>-->
-        <!--                <exclusion>-->
-        <!--                    <groupId>io.swagger</groupId>-->
-        <!--                    <artifactId>swagger-annotations</artifactId>-->
-        <!--                </exclusion>-->
-        <!--                <exclusion>-->
-        <!--                    <groupId>io.swagger</groupId>-->
-        <!--                    <artifactId>swagger-models</artifactId>-->
-        <!--                </exclusion>-->
-        <!--            </exclusions>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>io.springfox</groupId>-->
-        <!--            <artifactId>springfox-swagger-ui</artifactId>-->
-        <!--            <version>${swagger.version}</version>-->
-        <!--        </dependency>-->
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-boot-starter</artifactId>
-            <version>${swagger.version}</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>mapstruct</artifactId>
-                    <groupId>org.mapstruct</groupId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>swagger-annotations</artifactId>
-                    <groupId>io.swagger</groupId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>swagger-models</artifactId>
-                    <groupId>io.swagger</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
         <dependency>
             <groupId>io.swagger</groupId>
             <artifactId>swagger-core</artifactId>
@@ -244,6 +206,10 @@
                     <artifactId>swagger-core</artifactId>
                     <groupId>io.swagger</groupId>
                 </exclusion>
+                <exclusion>
+                    <artifactId>mapstruct</artifactId>
+                    <groupId>org.mapstruct</groupId>
+                </exclusion>
             </exclusions>
         </dependency>
         <!--Mysql依赖包-->
@@ -290,25 +256,12 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
-            <version>5.0.0</version>
+            <version>5.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
-            <version>5.0.0</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>commons-compress</artifactId>
-                    <groupId>org.apache.commons</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <!--  5.0.0版本的poi依赖的commons-compress版本为1.20，存在bug，故单独引入1.21  -->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-compress</artifactId>
-            <version>1.21</version>
-            <scope>compile</scope>
+            <version>5.1.0</version>
         </dependency>
         <dependency>
             <groupId>xerces</groupId>
@@ -352,7 +305,7 @@
         <dependency>
             <groupId>nl.basjes.parse.useragent</groupId>
             <artifactId>yauaa</artifactId>
-            <version>6.0</version>
+            <version>6.1</version>
             <exclusions>
                 <exclusion>
                     <artifactId>commons-collections4</artifactId>
@@ -396,6 +349,16 @@
             <groupId>org.apache.xmlgraphics</groupId>
             <artifactId>xmlgraphics-commons</artifactId>
             <version>2.6</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>commons-io</artifactId>
+                    <groupId>commons-io</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>commons-logging</artifactId>
+                    <groupId>commons-logging</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!--    4batik    -->
         <dependency>
