--- a/eladmin-tools/pom.xml
+++ b/eladmin-tools/pom.xml
@@ -87,6 +87,14 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!--   阿里短信通道SMS     -->
+        <!-- https://mvnrepository.com/artifact/com.aliyun/dysmsapi20170525 -->
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>dysmsapi20170525</artifactId>
+            <version>2.0.6</version>
+        </dependency>
+
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
