--- a/eladmin-starter/src/main/resources/config/application.yml
+++ b/eladmin-starter/src/main/resources/config/application.yml
@@ -49,6 +49,12 @@ spring:
     hibernate:
       ddl-auto: none
 
+  # 参考：https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-2.6-Release-Notes#pathpattern-based-path-matching-strategy-for-spring-mvc
+  # The default strategy for matching request paths against registered Spring MVC handler mappings has changed from AntPathMatcher to PathPatternParser
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+
 #  # 全局懒加载。
 #  main:
 #    lazy-initialization: true
