--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
         <java.version>17</java.version>
         <project.core.version>2.6.17</project.core.version>
         <log4jdbc.version>1.16</log4jdbc.version>
-        <swagger.version>3.0.0</swagger.version>
+        <springfox.version>3.0.0</springfox.version>
         <io.swagger.version>1.6.3</io.swagger.version>
         <fastjson.version>1.2.78</fastjson.version>
         <druid.version>1.2.8</druid.version>
@@ -184,6 +184,11 @@
             <groupId>io.swagger</groupId>
             <artifactId>swagger-models</artifactId>
             <version>${io.swagger.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${springfox.version}</version>
         </dependency>
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
